Finish test Model/Network. Change the database path.

--- a/Source/Model/Test-Database/Makefile
+++ b/Source/Model/Test-Database/Makefile
@@ -8,7 +8,7 @@ Database.o : ../Database.cpp ../Database.h ../Definition.h
 .PHONY : clean
 clean :
 	-rm Test Test.o Database.o
-	echo -e "TestDatabase\n3\n1\n" > TestDatabase.gwdb-header
-	echo "1 0 Query 2 3 1 - QueryNode" > 1.gwdb-data
-	echo "2 1 Answer 2 - AnswerNode (Yes)" >> 1.gwdb-data
-	echo "3 1 Answer 3 - AnswerNode (No)" >> 1.gwdb-data
+	echo -e "TestDatabase\n3\n1\n" > TestDatabase/TestDatabase.gwdb-header
+	echo "1 0 Query 2 3 1 - QueryNode" > TestDatabase/1.gwdb-data
+	echo "2 1 Answer 2 - AnswerNode (Yes)" >> TestDatabase/1.gwdb-data
+	echo "3 1 Answer 3 - AnswerNode (No)" >> TestDatabase/1.gwdb-data
